omni-lib/test_resources/good/DuplicateTopDefs.omni
module DuplicateTopDefs()

function() : () = ()

function() : () = ()

main() : Int = 0